src/test/deca/context/invalid/created/bad_return.deca
//Description :
// Test de  return mauvais type
//
// Resultats :
// Erreur


class Premiere {
    int x = 2;
    boolean x = true;

    int getX(){
    return this.x;
    }
}

{
Premiere prem = new Premiere();
boolean a = prem.getX();
}
